# Tagger

./: .SRCINFO  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Installer.iss  NickvisionTagger.sln  PKGBUILD  README.md  Tagger.doap  Tagger.sln  UpdateConfig.json  build.cake  main.cpp  meson.build  org.nickvision.tagger.desktop  org.nickvision.tagger.json  org.nickvision.tagger.metainfo.xml
.github/workflows/: build.yml  flatpak.yml  snap.yml  snapcraft.yml  spelling.yml  winui.yml
NickvisionTagger/: App.axaml  App.axaml.cs  NickvisionTagger.csproj  NickvisionTagger.vcxproj  NickvisionTagger.vcxproj.filters  Program.cs  main.cpp  resources.qrc
NickvisionTagger.GNOME/: NickvisionTagger.GNOME.csproj  Program.cs  nuget-sources.json
NickvisionTagger.GNOME/.fleet/: run.json
NickvisionTagger.GNOME/Blueprints/: album_art_info_dialog.blp  corrupted_files_dialog.blp  create_playlist_dialog.blp  lyrics_dialog.blp  music_file_row.blp  preferences_dialog.blp  scrolling_message_dialog.blp  shortcuts_dialog.blp  window.blp
NickvisionTagger.GNOME/Controls/: AlbumArtInfoDialog.cs  AutocompleteBox.cs  ComboBoxDialog.cs  CorruptedFilesDialog.cs  CreatePlaylistDialog.cs  EntryDialog.cs  MessageDialog.cs  MusicFileRow.cs  MusicRow.cs  ScrollingMessageDialog.cs
NickvisionTagger.GNOME/Helpers/: Builder.cs  GtkHelpers.cs  Help.cs
NickvisionTagger.GNOME/Resources/: org.nickvision.tagger-dark.css  org.nickvision.tagger.css  org.nickvision.tagger.gresource.xml
NickvisionTagger.GNOME/Views/: LyricsDialog.cs  MainWindow.cs  PreferencesDialog.cs
NickvisionTagger.Shared/: NickvisionTagger.Shared.csproj  org.nickvision.tagger.desktop.in  org.nickvision.tagger.metainfo.xml.in
NickvisionTagger.Shared/Controllers/: LyricsDialogController.cs  MainWindowController.cs  PreferencesViewController.cs
NickvisionTagger.Shared/Events/: NotificationSentEventArgs.cs  NotificationSeverity.cs  ShellNotificationSentEventArgs.cs  SynchronizedLyricsEventArgs.cs
NickvisionTagger.Shared/Helpers/: DependencyManager.cs  DocumentationHelpers.cs  FFProbeHelpers.cs  FfprobeHelpers.cs  Gettext.cs  MediaHelpers.cs
NickvisionTagger.Shared/Linux/: org.nickvision.tagger.desktop.in  org.nickvision.tagger.metainfo.xml.in
NickvisionTagger.Shared/Models/: AlbumArt.cs  AppInfo.cs  Configuration.cs  CorruptedMusicFile.cs  CorruptedMusicFileException.cs  LyricService.cs  MusicFile.cs  MusicFolder.cs  MusicLibrary.cs  PlaylistOptions.cs  PropertyMap.cs  TagMap.cs  Theme.cs
NickvisionTagger.WinUI/: App.xaml  App.xaml.cs  NickvisionTagger.WinUI.csproj  app.manifest
NickvisionTagger.WinUI/Controls/: AboutDialog.xaml  AboutDialog.xaml.cs  AlbumArtInfoDialog.xaml  AlbumArtInfoDialog.xaml.cs  ComboBoxDialog.xaml  ComboBoxDialog.xaml.cs  CorruptedFilesDialog.xaml  CorruptedFilesDialog.xaml.cs  CreatePlaylistDialog.xaml  CreatePlaylistDialog.xaml.cs  CustomPropertyRow.xaml  CustomPropertyRow.xaml.cs  EntryDialog.xaml  EntryDialog.xaml.cs  MusicFileRow.xaml  MusicFileRow.xaml.cs  StatusPage.xaml  StatusPage.xaml.cs  SyncLyricRow.xaml  SyncLyricRow.xaml.cs  ViewStack.xaml  ViewStack.xaml.cs  ViewStackPage.xaml  ViewStackPage.xaml.cs
NickvisionTagger.WinUI/Helpers/: TitledList.cs
NickvisionTagger.WinUI/Installer/: InnoSetupScript.iss
NickvisionTagger.WinUI/Properties/: launchSettings.json
NickvisionTagger.WinUI/Views/: LyricsDialog.xaml  LyricsDialog.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SettingsDialog.xaml  SettingsDialog.xaml.cs
NickvisionTagger/Extensions/: MediaExtensions.cs
NickvisionTagger/Helpers/: CurlHelpers.cpp  CurlHelpers.h  MediaHelpers.cpp  MediaHelpers.h  ThemeHelpers.cpp  ThemeHelpers.h
NickvisionTagger/Models/: AppInfo.cpp  AppInfo.h  Configuration.cpp  Configuration.cs  Configuration.h  MediaFileType.cpp  MediaFileType.h  MusicFile.cpp  MusicFile.cs  MusicFile.h  MusicFolder.cpp  MusicFolder.cs  MusicFolder.h  Theme.h
NickvisionTagger/Resources/: icon.ai
NickvisionTagger/UI/: IgnoreWheelEventFilter.cpp  IgnoreWheelEventFilter.h  Messenger.cpp  Messenger.h
NickvisionTagger/Update/: UpdateConfig.cpp  UpdateConfig.h  Updater.cpp  (+3 more)
controls/: headerbar.cpp  headerbar.h  infobar.cpp  infobar.h  progressdialog.cpp  progressdialog.h
flatpak/: chromaprint_ffmpeg5.patch  org.nickvision.tagger.json
helpers/: curlhelpers.cpp  curlhelpers.h  gtkhelpers.cpp  gtkhelpers.h  mediahelpers.cpp  mediahelpers.h
models/: configuration.cpp  configuration.h  datamusicfilescolumns.cpp  datamusicfilescolumns.h  mediafiletype.cpp  mediafiletype.h  musicfile.cpp  musicfile.h  musicfolder.cpp  musicfolder.h  musiclibrary.cpp  musiclibrary.h
po/: CREDITS.json  LINGUAS  POTFILES  fr.po  hr.po  nl.po  ru.po
snap/: snapcraft.yaml  web-help.patch
src/: main.cpp  meson.build
src/controllers/: mainwindowcontroller.cpp  mainwindowcontroller.hpp  preferencesdialogcontroller.cpp  preferencesdialogcontroller.hpp
src/helpers/: curlhelpers.cpp  curlhelpers.hpp  gtkhelpers.cpp  gtkhelpers.hpp  jsonhelpers.cpp  jsonhelpers.hpp  mediahelpers.cpp  mediahelpers.hpp  stringhelpers.cpp  stringhelpers.hpp
src/models/: acoustidquery.cpp  acoustidquery.hpp  acoustidsubmission.cpp  acoustidsubmission.hpp  appinfo.cpp  appinfo.hpp  configuration.cpp  configuration.hpp  musicbrainzrecordingquery.cpp  musicbrainzrecordingquery.hpp  musicbrainzreleasequery.cpp  musicbrainzreleasequery.hpp  musicfile.cpp  musicfile.hpp  musicfolder.cpp  musicfolder.hpp  tagmap.cpp  tagmap.hpp
src/ui/: application.cpp  application.hpp
src/ui/controls/: comboboxdialog.cpp  comboboxdialog.hpp  entrydialog.cpp  entrydialog.hpp  longmessagedialog.cpp  longmessagedialog.hpp  messagedialog.cpp  messagedialog.hpp  progressdialog.cpp  progressdialog.hpp
src/ui/views/: mainwindow.cpp  mainwindow.hpp  preferencesdialog.cpp  preferencesdialog.hpp  shortcutsdialog.cpp  shortcutsdialog.hpp
ui/: application.cpp  application.h  widget.cpp  widget.h
update/: updateconfig.cpp  updateconfig.h  updater.cpp  updater.h  version.cpp  version.h
views/: mainwindow.cpp  mainwindow.h  settingsdialog.cpp  settingsdialog.h
(+398 files in other folders)
