sources = files('main.cpp', 
		'models/appinfo.hpp',
		'models/appinfo.cpp',
		'models/configuration.hpp',
		'models/configuration.cpp',
		'models/musicfile.hpp',
		'models/musicfile.cpp',
		'models/musicfolder.hpp',
		'models/musicfolder.cpp',
		'models/acoustidquery.hpp',
		'models/acoustidquery.cpp',
		'models/musicbrainzrecordingquery.hpp',
		'models/musicbrainzrecordingquery.cpp',
		'models/musicbrainzreleasequery.hpp',
		'models/musicbrainzreleasequery.cpp',
		'helpers/gtkhelpers.hpp',
		'helpers/gtkhelpers.cpp',
		'helpers/mediahelpers.hpp',
		'helpers/mediahelpers.cpp',
		'controllers/mainwindowcontroller.hpp',
		'controllers/mainwindowcontroller.cpp',
		'controllers/preferencesdialogcontroller.hpp',
		'controllers/preferencesdialogcontroller.cpp',
		'ui/application.hpp', 
		'ui/application.cpp',
		'ui/controls/progressdialog.hpp',
		'ui/controls/progressdialog.cpp',
		'ui/controls/comboboxdialog.hpp',
		'ui/controls/comboboxdialog.cpp',
		'ui/views/mainwindow.hpp', 
		'ui/views/mainwindow.cpp',
		'ui/views/preferencesdialog.hpp',
		'ui/views/preferencesdialog.cpp',
		'ui/views/shortcutsdialog.hpp',
		'ui/views/shortcutsdialog.cpp')

resources = files('resources/org.nickvision.tagger.svg', 'resources/org.nickvision.tagger-devel.svg')
resources_symbolic = files('resources/org.nickvision.tagger-symbolic.svg')